--- a/assets/os/main.css
+++ b/assets/os/main.css
@@ -22,11 +22,14 @@ div[role='main'] {
   margin-top: -1em;
   padding-bottom: 1em;
 }
-#top {
+
+/* #top {
   display:flex;
-  /*background:rgba(10,20,20,0.6);*/
+  #background:rgba(10,20,20,0.6);
   background:linear-gradient(rgba(10,20,20,0.8),rgba(30,50,50,0.6))
-}
+}  */
+
+
 #top article {
   padding-top:3.8em;
   padding-left:1.6em;
