--- a/assets/os/main.css
+++ b/assets/os/main.css
@@ -47,60 +47,40 @@ div[role='main'] #top header {
 #top header img {
   max-width:300px;
 }
-/* style du bloc ul */
-.menu-vertical {
-  width: 10%; /* optionnel, c'est pour la démo */
+
+.vertical-menu{
+  width: 250px;
   list-style: none; /* supprime les puces de liste */
-  padding: 0px; /* on fait un peu de place autour des liens */
+  padding: 4px; /* on fait un peu de place autour des liens */
   margin: 0; /* on annule les marges */
-  position:absolute;
-  margin-left:2%;
-  border-radius: 0px 8px 0px 0px;
-  height:830px;
-  background-color:#2a2a2a;
-  -webkit-padding-start: 0px;
--moz-box-shadow: 5px 5px 5px 0px #343434;
--webkit-box-shadow: 5px 5px 5px 0px #343434;
--o-box-shadow: 5px 5px 5px 0px #343434;
-box-shadow: 5px 5px 5px 0px #343434;
-filter:progid:DXImageTransform.Microsoft.Shadow(color=#343434, Direction=134, Strength=5);
+  background: #F2F2F2;
 }
-.menu-vertical ul{
-	padding-left:0px;
-	
-}
- 
 /* styles des liens et éléments de liste */
-.mv-item,
-.mv-item a {
+.vm-item,
+.vm-item a {
   /* les liens et item deviennent des blocs */
   /* suffit théoriquement à virer les puces de liste */
   display: block;
 }
  
 /* styles des liens */
-.mv-item a {
+.vm-item a {
   margin: 1px 0; /* espace les liens d'1 px */
-  font-family: 'Lato', sans-serif;
-  font-size: 18px;
-  padding: 8px 0px; /* marges internes pour aérer */ 
-  text-align:center;
-  color: #FFF;
-  background: #2a2a2a;
+  padding: 8px 20px; /* marges internes pour aérer */ 
+  color: #666;
+  background: #FFF;
   text-decoration: none; /* on vire le soulignement */
-
-  /* on définit la transition pour les navigateurs */
   -webkit-transition: all .3s; /* Chrome/Safari */
   -moz-transition: all .3s; /* Firefox (plus trop nécessaire) */
   transition: all .3s; /* syntaxe officielle */
 }
  
 /* styles changeants au survol et focus */
-.mv-item a:hover,
-.mv-item a:focus {
-  background: #f0c77a;
-  color: #000;
-  padding-left: 10px; /* décalage du contenu de 10px vers la droite (30-20 = 10) */
+.vm-item a:hover,
+.vm-item a:focus {
+  background: #1ABC9C;
+  color: #FFF;
+  padding-left: 30px; /* décalage du contenu de 10px vers la droite (30-20 = 10) */
 }
 
 /* .menu {
