--- a/assets/os/main.css
+++ b/assets/os/main.css
@@ -49,26 +49,24 @@ div[role='main'] #top header {
 }
 
 .vertical-menu{
-  width: 250px;
+  width: 10%;
   list-style: none; /* supprime les puces de liste */
-  padding: 4px; /* on fait un peu de place autour des liens */
-  margin: 0; /* on annule les marges */
+  padding: 0px; /* on fait un peu de place autour des liens */
+  margin: 2%; 
   background: #2a2a2a;
+  padding-left:0px;
 }
-/* styles des liens et éléments de liste */
+
 .vm-item,
 .vm-item a {
-  /* les liens et item deviennent des blocs */
-  /* suffit théoriquement à virer les puces de liste */
   display: block;
 }
  
-/* styles des liens */
 .vm-item a {
   margin: 1px 0; /* espace les liens d'1 px */
   padding: 8px 20px; /* marges internes pour aérer */ 
-  color: #666;
-  background: #FFF;
+  color: #FFF;
+  background: #2a2a2a;
   text-decoration: none; /* on vire le soulignement */
   -webkit-transition: all .3s; /* Chrome/Safari */
   -moz-transition: all .3s; /* Firefox (plus trop nécessaire) */
@@ -81,7 +79,7 @@ div[role='main'] #top header {
 .vm-item a:focus {
   background: #f0c77a;
   color: #000;
-  padding-left: 30px; /* décalage du contenu de 10px vers la droite (30-20 = 10) */
+  padding-left:5%;
 }
 
 /* .menu {
