--- a/assets/os/main.css
+++ b/assets/os/main.css
@@ -53,10 +53,10 @@ div[role='main'] #top header {
 }
 
 .vertical-menu{
-  width: 15%;
+  width: 300px;
   list-style: none; /* supprime les puces de liste */
   padding: 0px; /* on fait un peu de place autour des liens */
-  margin: 0; 
+  display:flex;
   background: #2a2a2a;
   position:absolute;
 }
@@ -67,7 +67,7 @@ div[role='main'] #top header {
 }
  
 .vm-item a {
-  margin: 1px 0; /* espace les liens d'1 px */
+  margin: 1%; /* espace les liens d'1 px */
   padding: 8px 20px; /* marges internes pour aérer */ 
   color: #FFF;
   background: #2a2a2a;
