--- a/assets/os/main.css
+++ b/assets/os/main.css
@@ -50,15 +50,16 @@ div[role='main'] #top header {
 
 .vertical-menu ul{
 	padding-left:0px;
+	margin:0 0.25em;
 }
 
 .vertical-menu{
   width: 300px;
   list-style: none; /* supprime les puces de liste */
   padding: 0px; /* on fait un peu de place autour des liens */
-  display:flex;
   background: #2a2a2a;
   position:absolute;
+  padding-left: 2em;
 }
 
 .vm-item,
