--- a/assets/os/main.css
+++ b/assets/os/main.css
@@ -48,15 +48,20 @@ div[role='main'] #top header {
 }
 
 .play{
-	list-style-type: none;
+	/*list-style-type: none;*/
 	margin-left:70px;
 	padding-bottom:40px;
 	padding-top:15px;
+	float:left;
 }
 
 .pure-button{
 	padding:0.5em 1.5em;
 	font-size:150%;
+}
+
+.ts{
+	float:left;
 }
 
 .vertical-menu ul{
