--- a/assets/os/main.css
+++ b/assets/os/main.css
@@ -49,7 +49,8 @@ div[role='main'] #top header {
 
 .play{
 	/*list-style-type: none;*/
-	margin-left:60px;
+	margin-left:55px;
+	margin-bottom:25px;
 	padding-bottom:40px;
 	padding-top:15px;
 	float:left;
@@ -62,6 +63,7 @@ div[role='main'] #top header {
 
 .ts{
 	float:left;
+	margin-bottom:25px;
 }
 
 .vertical-menu ul{
