--- a/assets/os/main.css
+++ b/assets/os/main.css
@@ -51,7 +51,7 @@ div[role='main'] #top header {
 	/*list-style-type: none;*/
 	margin-left:55px;
 	padding-bottom:0px;
-	padding-top:15px;
+	padding-top:14px;
 	float:left;
 }
 
@@ -76,6 +76,7 @@ div[role='main'] #top header {
   background: #2a2a2a;
   margin-left: 2em;
   clear:both;
+  margin-top:130px;
 }
 
 .vm-item,
